--- a/app/app/templates/SurveyLandingPage.html
+++ b/app/app/templates/SurveyLandingPage.html
@@ -8,11 +8,11 @@
 </head>
 <body style="background-color: #8c8c8c">
 <div align = "center">
- <h1 style="font-size: 100px; font-family: 'Roboto', sans-serif;">
+ <h1 style="font-size: 80px; font-family: 'Roboto', sans-serif;">
     Welcome!
  </h1>
- <img src="../static/assets/images/Question-mark-blackandwhite.png" width="300" height="250">
- <h1 style="font-size: 100px; font-family: 'Roboto', sans-serif;">
+ <img src="../static/assets/images/Question-mark-blackandwhite.png" style="width: 30%; height: 20vw;">
+ <h1 style="font-size: 80px; font-family: 'Roboto', sans-serif;">
     Tap to Begin
  </h1>
 </div>
