--- a/app/app/templates/ResultsPage.html
+++ b/app/app/templates/ResultsPage.html
@@ -3,6 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Results</title>
+
+    <style>
+        .button {
+            background-color: #0066ff; /* Green */
+            border: none;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
+        #questionList {
+            background: #ffffff;
+            color: blue;
+            padding: 15px;
+            width: 30%;
+            height: 170px;
+            overflow: scroll;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+        }
+    </style>
+
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
     google.charts.load('current', {packages: ['corechart', 'bar']});
@@ -41,6 +69,43 @@
 <body style="background-color: #8c8c8c">
 <div align = "center">
    <div id="chart_div" style="width: 65%; height: 28vw; border: 20px solid #ffffff; border-radius: 25px;"></div>
+
+    <p id="questionList" >
+        This is where the questions would go. These items are in here as a place holder.
+        <br>
+        <a href="/" target="_parent">Question 1</a>
+        <br>
+        <a href="/" target="_parent">Question 2</a>
+        <br>
+        <a href="/" target="_parent">Question 3</a>
+        <br>
+        <a href="/" target="_parent">Question 4</a>
+        <br>
+        <br>
+        <a href="/" target="_parent">Question 1</a>
+        <br>
+        <a href="/" target="_parent">Question 2</a>
+        <br>
+        <a href="/" target="_parent">Question 3</a>
+        <br>
+        <a href="/" target="_parent">Question 4</a>
+        <br>
+        <br>
+        <a href="/" target="_parent">Question 1</a>
+        <br>
+        <a href="/" target="_parent">Question 2</a>
+        <br>
+        <a href="/" target="_parent">Question 3</a>
+        <br>
+        <a href="/" target="_parent">Question 4</a>
+        <br>
+    </p>
+
+    <a href="/" target="_parent">
+        <button class="button" type="button" >Back to Home</button>
+    </a>
+
+    <button class="button" type="button">Export Results</button>
 </div>
 </body>
 </html>
