Add Error Page Functionality
* Allows 404 and 500 Error, shows type of error and info
* Redirects to main page when the link is clicked

--- a/app/app/templates/error.html
+++ b/app/app/templates/error.html
@@ -11,8 +11,9 @@
  <h1 style="font-size: 40px; font-family: 'Roboto', sans-serif;">
     Whoops, you must've got lost out here!
  </h1>
+ <h2 style="font-size: 20px; font-family: 'Roboto', sans-serif;">{{ error }}</h2>
  <h4>
-     <a href="menu.html" style="font-size: 15px; font-family: 'Roboto', sans-serif;">
+     <a href='{{ url_for('menu') }}' style="font-size: 15px; font-family: 'Roboto', sans-serif;">
          Quick! <br> Let's head back to safety!
      </a>
  </h4>
