Beginning of master stylesheet
I'm not quite sure what we needed but if you want to make buttons or containing divs there's very basic CSS to match it. It's in app/style/style.css which you will most likely want to link from app/template/examplePage.html using <link rel="stylesheet" type="text/css" href="../style/style.css">

--- a/app/app/templates/surveyQuestion.html
+++ b/app/app/templates/surveyQuestion.html
@@ -1,24 +1,24 @@
 <!DOCTYPE HTML>
 <head>
-	<link rel="stylesheet" type="text/css" href="surveyQuestion.css">
+	<link rel="stylesheet" type="text/css" href="../style/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
-	<div id="questionBox" style="height: 100px">
+	<div id="questionBox" style="">
 		Which is the best project?
 	</div>
-	<div id="answerContainer" style="height: 400px">
-		<div class="button" style="height: 40%; width: 42%; float:left">
+	<div id="answerContainer" style="">
+		<div class="surveyButton" style=" width: 43.5vw; float:left">
 			CoCo Temp
 		</div>
-		<div class="button" style="height: 40%; width: 42%; float:right">
+		<div class="surveyButton" style=" width: 43.5vw; float:right">
 			R&D
 		</div>
-		<div class="button" style="height: 40%; width: 42%; float:left">
+		<div class="surveyButton" style=" width: 43.5vw; float:left">
 			Voting
 		</div>
-		<div class="button" style="height: 40%; width: 42%; float:right">
+		<div class="surveyButton" style=" width: 43.5vw; float:right">
 			Scheduling
 		</div>
 	</div>
