--- a/app/app/templates/ThankYouPage.html
+++ b/app/app/templates/ThankYouPage.html
@@ -13,7 +13,7 @@
  </h1>
  <img src="../static/assets/images/Question-mark-blackandwhite.png" style="width: 30%; height: 20vw;">
  <h1 style="font-size: 80px; font-family: 'Roboto', sans-serif;">
-    TYour Responces Have Been Recorded!
+    Your Responces Have Been Recorded!
  </h1>
 </div>
 </body>
