--- a/app/app/templates/ResultsPage.html
+++ b/app/app/templates/ResultsPage.html
@@ -3,33 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Results</title>
-
-    <style>
-        .button {
-            background-color: #0066ff; /* Green */
-            border: none;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 8px;
-        }
-
-        #questionList {
-            background: #ffffff;
-            color: blue;
-            padding: 15px;
-            width: 30%;
-            height: 170px;
-            overflow: scroll;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='assets/css/style.css') }}">
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
@@ -78,7 +53,7 @@
     }
     </script >
 </head>
-<body style="background-color: #8c8c8c">
+<body>
 <div align = "center">
    <div id="chart_div" style="width: 65%; height: 28vw; border: 20px solid #ffffff; border-radius: 25px;"></div>
 
