--- a/app/app/templates/ThankYouPage.html
+++ b/app/app/templates/ThankYouPage.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <title>Thank You Page</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='assets/css/style.css') }}">
 </head>
-<body style="background-color: #8c8c8c">
+<body>
 <div align = "center">
- <h1 style="font-size: 80px; font-family: 'Roboto', sans-serif;">
+ <h1 style="font-size: 80px;">
     Thank You!
  </h1>
- <img src="../static/assets/images/Question-mark-blackandwhite.png" style="width: 30%; height: 20vw;">
- <h1 style="font-size: 80px; font-family: 'Roboto', sans-serif;">
+ <img src="../static/assets/images/Question-mark-blackandwhite.png" class="largeSquareImage">
+ <h1 style="font-size: 80px;">
     Your Responses Have Been Recorded!
  </h1>
 </div>
