--- a/app/app/templates/menu.html
+++ b/app/app/templates/menu.html
@@ -1,67 +1,88 @@
 <html>
 <head>
     <title>Master Menu</title>
-    <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='assets/css/application.css') }}">
-    <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='assets/css/menu.css') }}"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='assets/css/style.css') }}">
+
+    <script type="text/javascript">
+
+        function notify(){
+            // Get the modal
+            var modal = document.getElementById('myModal');
+
+            // Get the button that opens the modal
+            var btn = document.getElementById("myBtn");
+
+            // Get the <span> element that closes the modal
+            var span = document.getElementsByClassName("close")[0];
+
+            // When the user clicks the button, open the modal
+            btn.onclick = function() {
+              modal.style.display = "block";
+            }
+
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function() {
+              modal.style.display = "none";
+            }
+
+            // When the user clicks anywhere outside of the modal, close it
+            window.onclick = function(event) {
+              if (event.target == modal) {
+                modal.style.display = "none";
+              }
+            }
+        }
+
+    </script>
 
 </head>
 <body>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3 menuTile" id="block1">
-                <!-- <a href="ask.html"> -->
-                    <div class="divText" style="height:100%; width: 100%;">
-                        <img src="${resource(dir:'images',file:'Question-mark-blackandwhite.png')}" />
-                        <h2 class="blackText"> Question </h2>
-                    </div>
-                <!-- </a> -->
-            </div>
-            <!-- <div class="col-sm-3 menuTile" id="block2">
-                <a href="ask/edit.html">
-                    <div class="divText" style="height:100%; width:100%;">
-                        <img src="${resource(dir:'images',file:'22-512.png')}" />
-                        <h2 class="blackText"> Edit </h2>
-                    </div>
-                </a>
-            </div>
-            <div class="col-sm-3 menuTile" id="block3">
-                <a href="ask/stats.html">
-                    <div style="height: 100%; width: 100%;">
-                        <img src="${resource(dir:'images',file:'plainicon.com-10528-256px.png')}" />
-                        <h2 class="blackText">Results</h2>
-                    </div>
-                </a>
-            </div>
+    <div align="center">
+        <div style = "width: fit-content;">
+
+            <a href='{{ url_for('surveyLandingPage') }}' target="_parent">
+                <div class="rectangle" style = "float:left;">
+                    <p>Take Survey</p>
+                    <img src="../static/assets/images/220px-Pictogram_voting_question.svg.png" class = "squareImage">
+                </div>
+            </a>
+
+            <a href='{{ url_for('surveyLandingPage') }}' target="_parent">
+                <div class="rectangle" style = "float:left;">
+                    <p>Admin Console</p>
+                    <img src="../static/assets/images/images.png" class = "squareImage">
+                </div>
+            </a>
+
         </div>
-        <div class="row">
-            <div class="col-sm-3 menuTile" id="block4">
-                <a href="touch/scan2.html">
-                    <div style="height:100%; width:100%;">
-                        <img src="${resource(dir:'images',file:'52479-200.png')}" />
-                        <h2 class="blackText">Survey 2</h2>
-                    </div>
-                </a>
-            </div>
-            <div class="col-sm-3 menuTile" id="block5">
-                <a href="touch/index.html">
-                    <div style="height: 100%; width:100%;">
-                        <img src="${resource(dir:'images',file:'52479-200.png')}" />
-                        <h2 class="blackText">Survey</h2>
-                    </div>
-                </a>
-            </div>
-            <div class="col-sm-3 menuTile" id="block6">
-                <a href="ask/help.html">
-                    <div style="height: 100%; width: 100%;">
-                        <img src="${resource(dir:'images',file:'1110.png')}" />
-                        <h2 class="blackText">Help</h2>
-                    </div>
-                </a>
-            </div> -->
+    </div>
+
+    <!-- Trigger/Open The Modal -->
+    <div id = "myBtn" class = "smallRectangle" style = "float: right" onclick="notify()">
+    </div>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h2>Modal Header</h2>
         </div>
+        <div class="modal-body">
+          <p>Some text in the Modal Body</p>
+          <p>Some other text...</p>
+        </div>
+        <div class="modal-footer">
+          <h3>Modal Footer</h3>
+        </div>
+      </div>
 
     </div>
+
 
 </body>
 </html>
