--- a/app/app/templates/surveyQuestion.html
+++ b/app/app/templates/surveyQuestion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
-	<link rel="stylesheet" type="text/css" href="../style/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='assets/css/style.css') }}">
 </head>
 
 <body>
