--- a/app/app/templates/menu.html
+++ b/app/app/templates/menu.html
@@ -60,8 +60,7 @@
     </div>
 
     <!-- Trigger/Open The Modal -->
-    <div id = "myBtn" class = "smallRectangle" style = "float: right" onclick="notify()">
-    </div>
+    <img src="../static/assets/images/Icon-round-Question_mark.svg.png" id="myBtn" class="questionIcon" onclick="notify()">
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
