--- a/app/app/templates/ResultsPage.html
+++ b/app/app/templates/ResultsPage.html
@@ -5,7 +5,7 @@
     <title>Results</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='assets/css/style.css') }}">
-
+    <script type="text/javascript" src="{{ url_for('static', filename='assets/javascript/main.js') }}"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
     google.charts.load('current', {packages: ['corechart', 'bar']});
@@ -54,6 +54,10 @@
     </script >
 </head>
 <body>
+
+<!-- Trigger/Open The Modal -->
+<img src="../static/assets/images/Icon-round-Question_mark.svg.png" id="myBtn" class="questionIcon" onclick="notify()">
+
 <div align = "center">
    <div id="chart_div" style="width: 65%; height: 28vw; border: 20px solid #ffffff; border-radius: 25px;"></div>
 
@@ -106,5 +110,25 @@
 
     <button class="button" type="button">Export Results</button>
 </div>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h2>Modal Header</h2>
+        </div>
+        <div class="modal-body">
+          <p>Some text in the Modal Body</p>
+          <p>Some other text...</p>
+        </div>
+        <div class="modal-footer">
+          <h3>Modal Footer</h3>
+        </div>
+      </div>
+
+    </div>
 </body>
 </html>
