--- a/app/app/templates/surveyQuestion.html
+++ b/app/app/templates/surveyQuestion.html
@@ -2,9 +2,14 @@
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='assets/css/style.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='assets/javascript/main.js') }}"></script>
 </head>
 
 <body>
+
+    <!-- Trigger/Open The Modal -->
+    <img src="../static/assets/images/Icon-round-Question_mark.svg.png" id="myBtn" class="questionIcon" onclick="notify()">
+
 	<div id="questionBox" style="">
 		Which is the best project?
 	</div>
@@ -22,4 +27,25 @@
 			Scheduling
 		</div>
 	</div>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h2>Modal Header</h2>
+        </div>
+        <div class="modal-body">
+          <p>Some text in the Modal Body</p>
+          <p>Some other text...</p>
+        </div>
+        <div class="modal-footer">
+          <h3>Modal Footer</h3>
+        </div>
+      </div>
+
+    </div>
+
 </body>
