Fix Survey Page
* Added Bootstrap to Answers
* Changed Question to be Label
* Changed pathing to get to questionSurvey

--- a/app/app/templates/SurveyLandingPage.html
+++ b/app/app/templates/SurveyLandingPage.html
@@ -14,7 +14,7 @@
     <img src="../static/assets/images/Icon-round-Question_mark.svg.png" id="myBtn" class="questionIcon" onclick="notify()">
 
     <!-- Change the link from menu to the beginning of the survey  -->
-    <a href='{{ url_for('menu') }}' style = "text-decoration: none; text-decoration-color: black;">
+    <a href='{{ url_for('surveyQuestion') }}' style = "text-decoration: none; text-decoration-color: black;">
 
         <div align = "center">
          <h1 style="font-size: 80px;">
