Menu Page Rework
* File Newline issues as well

--- a/app/app/templates/error.html
+++ b/app/app/templates/error.html
@@ -1,6 +1,6 @@
 {%- extends "base.html" %}
 
-{% block title %} Error - {{ error }} {% endblock %}
+{% block title %}Error - Ask{% endblock %}
 
 {% block content %}
 <div align="center">
