--- a/app/app/templates/menu.html
+++ b/app/app/templates/menu.html
@@ -1,56 +1,22 @@
-<html>
-<head>
-    <title>Master Menu</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename='assets/css/style.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', filename='assets/javascript/main.js') }}"></script>
+{%- extends 'base.html' %}
 
-</head>
-<body>
+{% block title %}Menu - Ask{% endblock %}
 
-    <div align="center">
-        <div style = "width: fit-content;">
-
-            <a href='{{ url_for('surveyLandingPage') }}' target="_parent">
-                <div class="rectangle" style = "float:left;">
-                    <p>Take Survey</p>
-                    <img src="../static/assets/images/220px-Pictogram_voting_question.svg.png" class = "squareImage">
-                </div>
-            </a>
-
-            <a href='{{ url_for('surveyLandingPage') }}' target="_parent">
-                <div class="rectangle" style = "float:left;">
-                    <p>Admin Console</p>
-                    <img src="../static/assets/images/images.png" class = "squareImage">
-                </div>
-            </a>
-
-        </div>
+{% block content %}
+<div align="center">
+    <div style="width: fit-content">
+        <a href="{{url_for('surveyLandingPage')}}" target='_parent'>
+            <div class="rectangle" style="float:left;">
+                <h1>Take Survey</h1>
+                <img src="{{url_for('static', filename='assets/images/220px-Pictogram_voting_question.svg.png')}}" class="squareImage">
+            </div>
+        </a>
+        <a href='{{ url_for('surveyLandingPage') }}' target="_parent">
+            <div class="rectangle" style = "float:right;">
+                <h1>Admin Console</h1>
+                <img src="{{url_for('static', filename='assets/images/images.png')}}" class="squareImage">
+            </div>
+        </a>
     </div>
-
-    <!-- Trigger/Open The Modal -->
-    <img src="../static/assets/images/Icon-round-Question_mark.svg.png" id="myBtn" class="questionIcon" onclick="notify()">
-
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-
-      <!-- Modal content -->
-      <div class="modal-content">
-        <div class="modal-header">
-          <span class="close">&times;</span>
-          <h2>Modal Header</h2>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-footer">
-          <h3>Modal Footer</h3>
-        </div>
-      </div>
-
-    </div>
-
-
-</body>
-</html>
+</div>
+{% endblock %}
