--- a/app/app/templates/alterQuestion.html
+++ b/app/app/templates/alterQuestion.html
@@ -59,15 +59,15 @@
 
         <script>
             var modal = document.getElementById('myModal');
-            var btn = document.getElementsById("none");
+            //var btn = document.getElementsById("one");
             var span = document.getElementsById("close")[0];
 
-            btn.onclick = function() {
+            function functionOnClick() {
               alert("Hello");
                 modal.style.display = "block";
             }
 
-            span.onclick = function() {
+            span.onclick function() {
                 modal.style.display = "none";
             }
 
@@ -98,7 +98,7 @@
                 <td>Will</td>
                 <td>Bill</td>
                 <td>Guillermo</td>
-                <td><button id = "one">Edit</button></td>
+                <td><button onclick="functionOnClick">Edit</button></td>
             </tr>
             <tr>
                 <td>2</td>
@@ -107,7 +107,7 @@
                 <td>To eat something</td>
                 <td>Water bottle</td>
                 <td>Wallet</td>
-                <td><button id = "two">Edit</button></td>
+                <td><button onclick="functionOnClick">Edit</button></td>
             </tr>
             <tr>
                 <td>3</td>
@@ -116,7 +116,7 @@
                 <td>Orange</td>
                 <td>Brown</td>
                 <td>Blue</td>
-                <td><button id = "three">Edit</button></td>
+                <td><button onclick="functionOnClick">Edit</button></td>
             </tr>
         </table>
 
