--- a/app/app/templates/alterQuestion.html
+++ b/app/app/templates/alterQuestion.html
@@ -1,74 +1,26 @@
 <html>
     <head>
-        <style>
-            .modal {
-                display: none; /* Hidden by default */
-                position: fixed; /* Stay in place */
-                z-index: 1; /* Sit on top */
-                left: 0;
-                top: 0;
-                width: 100%; /* Full width */
-                height: 100%; /* Full height */
-                overflow: auto; /* Enable scroll if needed */
-                background-color: rgb(160, 21, 21); /* Fallback color */
-                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-            }
-            .modal-content {
-                background-color: rgb(57, 68, 216);
-                margin: 15% auto; /* 15% from the top and centered */
-                padding: 20px;
-                border: 1px solid #888;
-                width: 80%; /* Could be more or less, depending on screen size */
-            }
-            .close {
-                color: #aaa;
-                float: right;
-                font-size: 28px;
-                font-weight: bold;
-            }
-
-            .close:hover,
-            .close:focus {
-                color: black;
-                text-decoration: none;
-                cursor: pointer;
-            }
-            body {
-                overflow: scroll;
-            }
-            table, th, td {
-                border: 1px solid black;
-                border-collapse: collapse;
-            }
-            th, td {
-                padding: 5px;
-                text-align: center;
-            }
-            table {
-                margin-left: auto;
-                margin-right: auto;
-                border-spacing: 5px;
-            }
-            table#t01 tr:nth-child(even) {
-                background-color: lightgray
-            }
-            table#t01 tr:nth-child(odd) {
-                background-color: white
-            }
-        </style>
-
+        <link rel="stylesheet" type="text/css" href="../static/assets/css/alterQuestionStyles.css">  
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>        
         <script>
+            // $ in front = something with jQueary
+            $(document).ready(init); // .ready() means that when the document is ready, call my init() function
             var modal = document.getElementById('myModal');
-            //var btn = document.getElementsById("one");
+            var btn = document.getElementById("one");
             var span = document.getElementsById("close")[0];
 
-            function functionOnClick() {
-              alert("Hello");
-                modal.style.display = "block";
+            function init() {
+                $(".Edit").click(launchModal); // . means "class", like the class we gave our edit buttons
+                $(".close").click(closeModal);
             }
 
-            span.onclick function() {
-                modal.style.display = "none";
+            function launchModal() {
+                $("#myModal").css("display", "block"); // display is the style item, block is the value we are giving it
+                //modal.style.display = "block";
+            }
+
+            function closeModal() {
+                $("#myModal").css("display", "none");
             }
 
             window.onclick = function(event) {
@@ -98,7 +50,7 @@
                 <td>Will</td>
                 <td>Bill</td>
                 <td>Guillermo</td>
-                <td><button onclick="functionOnClick">Edit</button></td>
+                <td><button id="btn1" class="Edit">Edit</button></td>
             </tr>
             <tr>
                 <td>2</td>
@@ -107,7 +59,7 @@
                 <td>To eat something</td>
                 <td>Water bottle</td>
                 <td>Wallet</td>
-                <td><button onclick="functionOnClick">Edit</button></td>
+                <td><button id="btn2" class="Edit">Edit</button></td>
             </tr>
             <tr>
                 <td>3</td>
@@ -116,7 +68,7 @@
                 <td>Orange</td>
                 <td>Brown</td>
                 <td>Blue</td>
-                <td><button onclick="functionOnClick">Edit</button></td>
+                <td><button id="btn3" class="Edit">Edit</button></td>
             </tr>
         </table>
 
