Added fields and button to modal
The modal that now pops up when you try to edit a question's contents now contains fields to alter the question title and choices, plus a submiut button.  For now, this is only a skeleton, nothing happens with them yet.

--- a/app/app/templates/alterQuestion.html
+++ b/app/app/templates/alterQuestion.html
@@ -75,7 +75,25 @@
         <div id="myModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <p>SOME TEXT</p>
+                <p style="text-align: center">Edit Question Content</p>
+                <form style="text-align: center">
+                    New Question Title:
+                    <input type="text" name="newTitle">
+                    <br><br>
+                    New 1st Choice:
+                    <input type="text" name="newFirst">
+                    <br><br>
+                    New 2nd Choice:
+                    <input type="text" name="newSecond">
+                    <br><br>
+                    New 3rd Choice:
+                    <input type="text" name="newThird">
+                    <br><br>
+                    New 4th Choice:
+                    <input type="text" name="newFourth">
+                    <br><br>
+                    <button type="submit">Save Changes</button>
+                </form>
             </div>
         </div>
     </body>
