--- a/app/app/static/assets/css/alterQuestionStyles.css
+++ b/app/app/static/assets/css/alterQuestionStyles.css
@@ -7,14 +7,14 @@
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(160, 21, 21); /* Fallback color */
+    background-color: rgb(255, 0, 0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 .modal-content {
-    background-color: rgb(57, 68, 216);
+    background-color: rgb(255, 70, 70);
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 5px solid #888;
+    border: 5px solid rgb(0, 0, 0);
     width: 80%; /* Could be more or less, depending on screen size */
 }
 .close {
