slight refactor for docker scripts to run

--- a/app/ask_meagain/templates/error.html
+++ b/app/ask_meagain/templates/error.html
@@ -9,7 +9,7 @@
     </h1>
     <h2 style="font-size: 20px;">{{ error }}</h2>
     <h4>
-        <a href='{{ url_for('menu') }}' style="font-size: 15px;">
+        <a href='{{ url_for('index') }}' style="font-size: 15px;">
             Quick! <br> Let's head back to safety!
         </a>
     </h4>
