--- a/app/ask_meagain/blueprints/admin/templates/ResultsPage.html
+++ b/app/ask_meagain/blueprints/admin/templates/ResultsPage.html
@@ -24,7 +24,7 @@
         <h1> No questions in the Database </h1>
     {% endif %}
 
-    <a href='{{ url_for('hello') }}' target="_parent">
+    <a href='{{ url_for('index') }}' target="_parent">
         <button class="button" type="button" >Back to Home</button>
     </a>
 
