--- a/app/app/templates/surveyLanding.html
+++ b/app/app/templates/surveyLanding.html
@@ -1,8 +1,15 @@
 {%- extends 'base.html' %}
+{% from "macros.html" import render_modal %}
 
 {% block title %}Survey Landing - Ask{% endblock %}
 
 {% block content %}
+
+    {{ render_modal(
+    "Survey Landing Page",
+    "This is a page where stuff happens."
+ ) }}
+
     <a href="{{ url_for('surveyQuestion') }}" style="text-decoration: none">
         <div align="center">
             <h1 style="font-size: 80px">Welcome!</h1>
