--- a/app/ask_meagain/blueprints/admin/templates/alterQuestion.html
+++ b/app/ask_meagain/blueprints/admin/templates/alterQuestion.html
@@ -1,80 +1,41 @@
-<html>
-    <head>
+{% extends "base.html" %}
+{% block head %}
+        {{super()}}
         <link rel="stylesheet" type="text/css" href="../static/assets/css/alterQuestionStyles.css">  
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>        
-        <script>
-            // $ in front = something with jQueary
-            $(document).ready(init); // .ready() means that when the document is ready, call my init() function
-            var modal = document.getElementById('myModal');
-            var btn = document.getElementById("one");
-            var span = document.getElementsById("close")[0];
-
-            function init() {
-                $(".Edit").click(launchModal); // . means "class", like the class we gave our edit buttons
-                $(".close").click(closeModal);
-            }
-
-            function launchModal() {
-                $("#myModal").css("display", "block"); // display is the style item, block is the value we are giving it
-                //modal.style.display = "block";
-            }
-
-            function closeModal() {
-                $("#myModal").css("display", "none");
-            }
-
-            window.onclick = function(event) {
-                if(event.target == modal) {
-                    modal.style.display = "none";
-                }
-            }
-        </script>
-    </head>
-    <body>
+{% endblock %}
+{% block content %}
         <title>Alter Question</title>
         <h1 style="text-align: center">Questions:</h1>
-        <table style="width:50% " id="t01">
-            <tr>
-                <th>Question Number</th>
-                <th>Question Title</th>
-                <th>Answer #1</th>
-                <th>Answer #2</th>
-                <th>Answer #3</th>
-                <th>Answer #4</th>
-                <th>Edit Content</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>What is your name?</td>
-                <td>William</td>
-                <td>Will</td>
-                <td>Bill</td>
-                <td>Guillermo</td>
-                <td><button id="btn1" class="Edit">Edit</button></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>What is your quest?</td>
-                <td>To make something</td>
-                <td>To eat something</td>
-                <td>Water bottle</td>
-                <td>Wallet</td>
-                <td><button id="btn2" class="Edit">Edit</button></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>What is your favorite color?</td>
-                <td>Red</td>
-                <td>Orange</td>
-                <td>Brown</td>
-                <td>Blue</td>
-                <td><button id="btn3" class="Edit">Edit</button></td>
-            </tr>
-        </table>
+        {% if questions %}
+            <table style="width:50% " id="t01">
+                <tr>
+                    <th>Question Number</th>
+                    <th>Question Title</th>
+                    <th>Answer #1</th>
+                    <th>Answer #2</th>
+                    <th>Answer #3</th>
+                    <th>Answer #4</th>
+                    <th>Edit Content</th>
+                </tr>
+                {% for question in questions %}
+                <tr>
+                    <td>{{question.id}}</td>
+                    <td>{{question.questionText}}</td>
+                    {% for choice in question.choices %}
+                    <td>{{choice}}</td>
+                    {% endfor %}
+                    <td><button id="btn1" class="Edit">Edit</button></td>
+                </tr>
+                {% endfor %}
+            </table>
+        {% else %}
+            No Questions Available
+        {% endif %}
 
-        <div id="myModal" class="modal">
+        <div id="myModal" class="modal ">
             <div class="modal-content">
-                <span class="close">&times;</span>
+                <span class="close" id="close">&times;</span>
                 <p style="text-align: center">Edit Question Content</p>
                 <form style="text-align: center">
                     New Question Title:
@@ -96,5 +57,34 @@
                 </form>
             </div>
         </div>
-    </body>
-</html>
+{% endblock %}
+{% block scripts %}
+        <script>
+            // $ in front = something with jQueary
+            $(document).ready(init); // .ready() means that when the document is ready, call my init() function
+            var modal = document.getElementById('myModal');
+            var btn = document.getElementById("one");
+            var span = document.getElementById("close")[0];
+
+            function init() {
+                $(".Edit").click(launchModal); // . means "class", like the class we gave our edit buttons
+                $(".close").click(closeModal);
+                closeModal
+            }
+
+            function launchModal() {
+                $("#myModal").css("display", "block"); // display is the style item, block is the value we are giving it
+                //modal.style.display = "block";
+            }
+
+            function closeModal() {
+                $("#myModal").css("display", "none");
+            }
+
+            window.onclick = function(event) {
+                if(event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
+        </script>
+{% endblock %}
