added some results and alter logic

--- a/app/ask_meagain/blueprints/admin/templates/ResultsPage.html
+++ b/app/ask_meagain/blueprints/admin/templates/ResultsPage.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="{{ url_for('static', filename='assets/javascript/main.js') }}"></script>
 {% endblock %}
 
-{% block body %}
+{% block content %}
 
 <!-- Trigger/Open The Modal -->
 
