made it easier to check if changes saved.

--- a/app/ask_meagain/templates/base.html
+++ b/app/ask_meagain/templates/base.html
@@ -1,5 +1,5 @@
 {%- extends "bootstrap/base.html" %}
-{% import  "macros.jinja" as macros %}
+{% import  "macros.html" as macros %}
 {% block title %}{% endblock %}
 
 {% import "bootstrap/fixes.html" as fixes %}
