--- a/app/ask_meagain/blueprints/survey/templates/survey.html
+++ b/app/ask_meagain/blueprints/survey/templates/survey.html
@@ -5,12 +5,17 @@
 {% block content %}
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
-        {{ form.question.label() }}
+        {{ form.question.default }}
         <p>
             {{ form.answer1(class_="btn btn-primary") }}
             {{ form.answer2(class_="btn btn-primary") }}<br />
             {{ form.answer3(class_="btn btn-primary") }}
             {{ form.answer4(class_="btn btn-primary") }}
         </p>
+
+            {{ form.answer1 }}
+            {{ form.answer2 }}<br />
+            {{ form.answer3 }}
+            {{ form.answer4 }}
     </form>
 {% endblock %}
