--- a/app/ask_meagain/templates/menu.html
+++ b/app/ask_meagain/templates/menu.html
@@ -1,8 +1,8 @@
 {%- extends 'base.html' %}
-
 {% block title %}Menu - Ask{% endblock %}
 
 {% block content %}
+{{ render_modal("Main Menu", "Press F to continue...") }}
 <div align="center">
     <div style="width: fit-content">
         <a href="{{url_for('survey.surveyLandingPage')}}" target='_parent'>
