--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -11,7 +11,7 @@
                 <img src="{{url_for('static', filename='assets/images/220px-Pictogram_voting_question.svg.png')}}" class="squareImage">
             </div>
         </a>
-        <a href='{{ url_for('survey.surveyLandingPage') }}' target="_parent">
+        <a href="{{ url_for('admin.adminLoginPage') }}" target="_top">
             <div class="rectangle" style = "float:right;">
                 <h1>Admin Console</h1>
                 <img src="{{url_for('static', filename='assets/images/images.png')}}" class="squareImage">
