--- a/app/blueprints/admin/templates/adminLogin.html
+++ b/app/blueprints/admin/templates/adminLogin.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div align="center">
-        <form action="{{ url_for('admin.alterQuestion') }}">
+        <form action="{{ url_for('admin.adminDashboardPage') }}">
             <button type="submit" >
                 Login
             </button>
