--- a/app/static/assets/css/style.css
+++ b/app/static/assets/css/style.css
@@ -19,17 +19,18 @@ p
 }
 
 div.rectangle {
+		display: inline-block;
         background-color: #ffffff;
         margin:2.5vh;
         border-radius: 2.5vh;
-        height: 35vh;
-        width: 20vw;
-    }
+        height: 275px;
+        width: 300px;
+}
 
 img.squareImage {
 	margin:2.5vh;
-	height: 17vh;
-	width: 10vw;
+	height: 175px;
+	width: 175px;
 }
 
 img.largeSquareImage {
