demo login page file structure for putting staticfiles

--- a/admin_back/templates/admin_back/index.html
+++ b/admin_back/templates/admin_back/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
+    {% load static %}
+    <link href="{% static 'admin_back/style.css' %}" rel="stylesheet">
+
+ </head>
 <body>
-    <strong>bigtext</strong>
+    <strong>admin text</strong>
 </body>
 </html>
