--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    {% load static %}
+    <link href="{% static 'polls/style.css'%}" rel="stylesheet">
+
 </head>
 <body>
-    <strong>bigtext</strong>
+    <strong>Polls Application</strong>
 </body>
 </html>
