Added base html
Base html file

--- a/admin_back/templates/admin_back/create_question.html
+++ b/admin_back/templates/admin_back/create_question.html
@@ -1,3 +1,8 @@
+
+{% extends 'admin_back/base.html' %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 <title>Voting Booth</title>
@@ -58,3 +63,4 @@
 
 </body>
 </html>
+{% endblock %}
