--- a/admin_back/templates/admin_back/home.html
+++ b/admin_back/templates/admin_back/home.html
@@ -90,6 +90,9 @@
     <button class="button" style="font-size:20px; margin-top: 20px;" tabindex=4>
         Authenticate New User
     </button>
-    <a href="{% url 'social:begin' 'google-oauth2' %}">Google Login</a>
+     <p>-- OR -- </p>
+    <a href="{% url 'social:begin' 'google-oauth2'%}">
+        <button type="button" name="button" class="btn btn.danger">Google Login</button>
+    </a>
 </body>
 </html>
